--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.21",
     "otp-generator": "^4.0.1",
     "socket.io": "^4.6.1",
     "xss-clean": "^0.1.1"
