--- a/server/config.env
+++ b/server/config.env
@@ -1,3 +1,3 @@
 PORT = 5000
-MONGODB_URL = 123
+MONGODB_URL = mongodb+srv://bingremory:bingremory@cluster0.fvgynlm.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = 123456135cxadfsafdsm@123
