--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "emoji-mart": "^5.5.2",
     "framer-motion": "^10.0.1",
+    "highlight.js": "^11.7.0",
+    "jwt-decode": "^3.1.2",
+    "numeral": "^2.0.6",
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
