--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@faker-js/faker": "^7.6.0",
     "@hookform/resolvers": "^2.9.11",
     "@iconify/react": "^4.1.0",
     "@mui/lab": "^5.0.0-alpha.121",
